Fixwhitespace (#9)

--- a/Assets/css/usman/style.css
+++ b/Assets/css/usman/style.css
@@ -496,7 +496,7 @@
         height: 40%;
     }
     .d-masjid-e-usman{
-        height: 180vh;
+        height: 120vh;
     }
      .d-masjid-e-usman .jummah-jamah-time {
         line-height: 0;
@@ -512,7 +512,9 @@
     .d-masjid-e-usman .title-value{
         padding-top: 4px;
     }
-  
+    .d-masjid-e-usman .height-100{
+        height: auto;
+    }
 }
 
 @media(max-width : 460px){
@@ -573,14 +575,14 @@
     }
     .d-masjid-e-usman .banner-section {
         height: 40%;
+        padding-top: 0;
     }
     .d-masjid-e-usman{
-        height: 130vh;
+        height: 108vh;
     }
     .d-masjid-e-usman .mobile-logo-column img{
         height: 100px;
         position: relative;
-        left: 117px;
         top: 20px;
     }
     .d-masjid-e-usman .left-main-col-dateandtime {
